--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Body {
             <div style="margin: 15px;" class="text_1"> <a href="#">Forgot password? </a></div>    
             <div class="text">Don't have an account? 
                 <div >
-                    <button style="margin: 20px;" type="button" onclick="location.href='Signup.html'" class=" register ">Signup</button>             
+                    <button style="margin: 20px;" type="button" onclick="location.href='Signup.html'" class=" register "><u>Signup</u></button>             
                 </div>
             </div>  
         </div>          
